# notes-sync

./: .gitignore  README.md  meson.build  mount_gdrive.sh  run.py  test_sync.sh
notes_app/: __init__.py  ai_helper.py  config.py  editor.py  file_manager.py  main.py  sidebar.py  window.py
